Disabled dates option

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -91,7 +91,7 @@
                                                         hourFormat="12" [readonly]="false"
                                                        (valueChange)="onDateTimePickerValueChange($event)"></mona-date-time-picker>
 
-                                <mona-date-picker format="d/M/yyyy" style="width: 250px;" [readonly]="false" (valueChange)="print($event)"></mona-date-picker>
+                                <mona-date-picker format="d/M/yyyy" style="width: 250px;" [readonly]="false" [disabledDates]="disabledDates" (valueChange)="print($event)"></mona-date-picker>
 
                                 <mona-time-selector  hourFormat="12" [readonly]="false" [disabled]="false" (valueChange)="print($event)"></mona-time-selector>
                             </div>
