--- a/projects/mona-ui/src/lib/date-inputs/modules/date-picker/components/date-picker/date-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/date-picker/components/date-picker/date-picker.component.html
@@ -14,5 +14,5 @@
 </div>
 
 <ng-template #datePopupTemplate>
-    <mona-calendar [value]="value" (valueChange)="onCalendarValueChange($event)"></mona-calendar>
+    <mona-calendar [disabledDates]="disabledDates" [value]="value" (valueChange)="onCalendarValueChange($event)"></mona-calendar>
 </ng-template>
