--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -87,15 +87,20 @@
                             </div>
 
                             <div>
+
+                                <mona-switch [labelOff]="'12'" labelOn="24" [(ngModel)]="dateFormat24Hours"></mona-switch>
+
                                 <mona-date-time-picker format="dd/MM/yyyy hh:mm a" style="width: 250px; margin-right: 20px;"
-                                                        hourFormat="12" [readonly]="false"
+                                                       [hourFormat]="dateFormat24Hours ? '24' : '12'" [readonly]="false"
                                                        (valueChange)="onDateTimePickerValueChange($event)"></mona-date-time-picker>
 
                                 <mona-date-picker format="d/M/yyyy" style="width: 250px;" [readonly]="false"
                                                   [min]="dateMin" [max]="dateMax"
                                                   (valueChange)="print($event)"></mona-date-picker>
 
-                                <mona-time-selector  hourFormat="12" [readonly]="false" [disabled]="false" (valueChange)="print($event)"></mona-time-selector>
+                                <mona-time-picker [format]="dateFormat24Hours ? 'HH:mm' : 'hh:mm a'" style="width: 200px;"></mona-time-picker>
+
+<!--                                <mona-time-selector  hourFormat="24" [readonly]="false" [disabled]="false" (valueChange)="print($event)"></mona-time-selector>-->
                             </div>
 
                             <div>
