--- a/projects/mona-ui/src/lib/date-inputs/modules/date-time-picker/components/date-time-picker/date-time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/date-time-picker/components/date-time-picker/date-time-picker.component.html
@@ -1,10 +1,5 @@
-<div class="mona-date-time-picker" [ngClass]="{'mona-disabled': disabled}">
+<div class="mona-date-time-picker" [ngClass]="{'mona-disabled': disabled}" #popupAnchor>
     <mona-text-box [disabled]="disabled" [readonly]="readonly" [ngModel]="currentDateString" (ngModelChange)="onDateStringEdit($event)" (inputBlur)="onDateInputBlur()">
-        <ng-container *ngIf="currentDateInvalid">
-            <ng-template monaTextBoxSuffixTemplate>
-                <fa-icon [icon]="wrongDateIcon" style="color: crimson;"></fa-icon>
-            </ng-template>
-        </ng-container>
         <ng-template monaTextBoxSuffixTemplate>
             <button monaButton [flat]="true" (click)="onDateInputButtonClick()" [disabled]="disabled">
                 <fa-icon [icon]="dateIcon"></fa-icon>
@@ -24,5 +19,5 @@
 
 <ng-template #timePopupTemplate>
     <mona-time-selector [value]="value" (valueChange)="onTimeSelectorValueChange($event)"
-                        [hourFormat]="hourFormat"></mona-time-selector>
+                        [hourFormat]="hourFormat" [showSeconds]="showSeconds"></mona-time-selector>
 </ng-template>
