--- a/projects/mona-ui/src/lib/date-inputs/modules/time-selector/components/time-selector/time-selector.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/time-selector/components/time-selector/time-selector.component.html
@@ -1,21 +1,15 @@
-<div class="mona-time-selector" [ngClass]="{'mona-disabled':disabled}">
-    <div style="display: flex; flex-direction: column;">
-        <mona-numeric-text-box [readonly]="readonly" [value]="hour" (valueChange)="onHourChange($event)"
-                               (inputBlur)="onHourBlur($event)"
-                               [min]="0" [max]="hourFormat==='12' ? 12 : 23" [disabled]="disabled"></mona-numeric-text-box>
-    </div>
-    <div>
-        <span>:</span>
-    </div>
-    <div>
-        <mona-numeric-text-box [readonly]="readonly" [value]="minute" (valueChange)="onMinuteChange($event)"
-                               (inputBlur)="onMinuteBlur($event)"
-                               [min]="0" [max]="59" [disabled]="disabled"></mona-numeric-text-box>
-    </div>
-    <div *ngIf="hourFormat==='12'">
-        <mona-button-group [disabled]="disabled">
-            <button monaButton [selected]="meridiem==='AM'" (click)="onMeridiemClick('AM')">AM</button>
-            <button monaButton [selected]="meridiem==='PM'" (click)="onMeridiemClick('PM')">PM</button>
-        </mona-button-group>
-    </div>
+<div class="mona-time-selector" [ngClass]="{'mona-disabled': disabled}" #popupAnchor>
+    <ol #hoursListElement>
+        <li *ngFor="let h of hours" [ngClass]="{'mona-selected':h===hour}" (click)="onHourChange(h)" [attr.data-value]="h">{{h | number:'2.0'}}</li>
+    </ol>
+    <ol #minutesListElement>
+        <li *ngFor="let m of minutes" [ngClass]="{'mona-selected':m===minute}" (click)="onMinuteChange(m)"  [attr.data-value]="m">{{m | number:'2.0'}}</li>
+    </ol>
+    <ol #secondsListElement *ngIf="showSeconds">
+        <li *ngFor="let s of seconds" [ngClass]="{'mona-selected':s===second}" (click)="onSecondChange(s)" [attr.data-value]="s">{{s | number:'2.0'}}</li>
+    </ol>
+    <ol *ngIf="hourFormat==='12'">
+        <li [ngClass]="{'mona-selected': meridiem==='AM'}" (click)="onMeridiemClick('AM')">AM</li>
+        <li [ngClass]="{'mona-selected': meridiem==='PM'}" (click)="onMeridiemClick('PM')">PM</li>
+    </ol>
 </div>
