--- a/projects/mona-ui/src/lib/date-inputs/modules/time-selector/components/time-selector/time-selector.component.scss
+++ b/projects/mona-ui/src/lib/date-inputs/modules/time-selector/components/time-selector/time-selector.component.scss
@@ -1,28 +1,25 @@
+:host {
+    width: 100%;
+    height: 100%;
+}
+
 div.mona-time-selector {
     display: flex;
     width: 100%;
-    align-items: center;
-    justify-content: center;
-    user-select: none;
-    & > div {
+    height: 250px;
+    overflow: hidden;
+    & ol {
+        flex: 1;
         display: flex;
+        list-style: none;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 0 4px;
-        & > span {
-            font-size: 14px;
-            font-weight: bold;
+        overflow: hidden auto;
+        & li {
             display: flex;
             align-items: center;
             justify-content: center;
+            padding: 8px 0;
+            font-weight: bold;
         }
-        & mona-numeric-text-box {
-            width: 64px;
-        }
-    }
-    & fa-icon {
-        font-size: 18px;
     }
 }
-
