--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -45,6 +45,9 @@
                                         [toggleable]="false" [flat]="false"
                                         (selectedChange)="onButtonSelectedChange($event)" (click)="openPopup($event)"
                                         #testButtonRef>Test Button
+                                    <mona-tooltip [target]="testButtonRef">
+                                        <span style="font-weight: bold; font-size: 24px;">Test Button Tooltip</span>
+                                    </mona-tooltip>
                                 </button>
                             </div>
 
