--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -52,7 +52,11 @@
                                     <mona-menu-item text="Undo"></mona-menu-item>
                                     <mona-menu-item text="Redo"></mona-menu-item>
                                     <mona-menu-item text="Cut"></mona-menu-item>
-                                    <mona-menu-item text="Copy"></mona-menu-item>
+                                    <mona-menu-item text="Copy">
+                                        <mona-menu-item text="Copy 1"></mona-menu-item>
+                                        <mona-menu-item text="Copy 2"></mona-menu-item>
+                                        <mona-menu-item text="Copy 3"></mona-menu-item>
+                                    </mona-menu-item>
                                     <mona-menu-item text="Paste"></mona-menu-item>
                                     <mona-menu-item text="Delete"></mona-menu-item>
                                 </mona-menu>
