--- a/projects/mona-ui/src/lib/menus/modules/menubar/components/menubar/menubar.component.html
+++ b/projects/mona-ui/src/lib/menus/modules/menubar/components/menubar/menubar.component.html
@@ -1,8 +1,10 @@
 <ul class="mona-menubar">
     <ng-container *ngFor="let item of menuList">
-        <li #listItemElement>
+        <li [attr.data-uid]="item.uid" (click)="onMenuClick(contextMenuComponent)" (mouseenter)="onMenuMouseEnter(contextMenuComponent)"
+            [ngClass]="{'mona-active': currentContextMenu?.uid===contextMenuComponent.uid}" #listItemElement>
             <span>{{item.text}}</span>
-            <mona-contextmenu [target]="listItemElement" [menuItems]="item.menuItems" trigger="click"></mona-contextmenu>
+            <mona-contextmenu [target]="listItemElement" [menuItems]="item.menuItems" trigger="click"
+                              (open)="onContextMenuOpen($event)" (close)="onContextMenuClose($event)" #contextMenuComponent></mona-contextmenu>
         </li>
     </ng-container>
 </ul>
