--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -46,7 +46,11 @@
                                     <mona-menu-item text="Open" ></mona-menu-item>
                                     <mona-menu-item text="Save"></mona-menu-item>
                                     <mona-menu-item text="Save As"></mona-menu-item>
-                                    <mona-menu-item text="Exit"></mona-menu-item>
+                                    <mona-menu-item text="Exit">
+                                        <ng-template monaMenuItemTextTemplate>
+                                            <span style="color: crimson; font-weight: bolder; font-size: 14px;">Exit</span>
+                                        </ng-template>
+                                    </mona-menu-item>
                                 </mona-menu>
                                 <mona-menu text="Edit">
                                     <mona-menu-item text="Undo"></mona-menu-item>
@@ -57,7 +61,15 @@
                                         <mona-menu-item text="Copy 2"></mona-menu-item>
                                         <mona-menu-item text="Copy 3"></mona-menu-item>
                                     </mona-menu-item>
-                                    <mona-menu-item text="Paste"></mona-menu-item>
+                                    <mona-menu-item text="Paste">
+                                        <mona-menu-item text="Paste 1" [disabled]="true"></mona-menu-item>
+                                        <mona-menu-item text="Paste 2">
+                                            <mona-menu-item text="Paste 2.1"></mona-menu-item>
+                                            <mona-menu-item text="Paste 2.2"></mona-menu-item>
+                                            <mona-menu-item text="Paste 2.3" (menuClick)="print($event)"></mona-menu-item>
+                                        </mona-menu-item>
+                                        <mona-menu-item text="Paste 3"></mona-menu-item>
+                                    </mona-menu-item>
                                     <mona-menu-item text="Delete"></mona-menu-item>
                                 </mona-menu>
                                 <mona-menu text="View">
@@ -68,6 +80,11 @@
                                     <mona-menu-item text="Zoom Extents"></mona-menu-item>
                                     <mona-menu-item text="Zoom Previous"></mona-menu-item>
                                     <mona-menu-item text="Zoom Window"></mona-menu-item>
+                                </mona-menu>
+                                <mona-menu text="Tools" *ngIf="menuBarMenuVisible">
+                                    <mona-menu-item text="Options"></mona-menu-item>
+                                    <mona-menu-item text="Settings"></mona-menu-item>
+                                    <mona-menu-item text="Preferences"></mona-menu-item>
                                 </mona-menu>
                             </mona-menubar>
                         </div>
@@ -147,7 +164,7 @@
                                 <button monaButton [disabled]="false" [toggleable]="true" #contextMenuAnchor>
                                     <span style="color: lightcoral;">Context Menu Target</span>
                                 </button>
-                                <mona-contextmenu [target]="contextMenuAnchor">
+                                <mona-contextmenu [target]="contextMenuAnchor" (navigate)="print($event)">
                                     <mona-menu-item text="File">
                                         <ng-template monaMenuItemTextTemplate let-menuItem>
                                             <span style="color: mediumseagreen;">File</span>
