Menubar keyboard navigation fixes

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -41,7 +41,7 @@
                     <ng-template monaTabContentTemplate>
                         <div>
                             <mona-menubar>
-                                <mona-menu text="File">
+                                <mona-menu text="File" [disabled]="menuBarMenuVisible">
                                     <mona-menu-item text="New" ></mona-menu-item>
                                     <mona-menu-item text="Open" ></mona-menu-item>
                                     <mona-menu-item text="Save"></mona-menu-item>
@@ -52,7 +52,7 @@
                                         </ng-template>
                                     </mona-menu-item>
                                 </mona-menu>
-                                <mona-menu text="Edit">
+                                <mona-menu text="Edit" [disabled]="false">
                                     <mona-menu-item text="Undo"></mona-menu-item>
                                     <mona-menu-item text="Redo"></mona-menu-item>
                                     <mona-menu-item text="Cut"></mona-menu-item>
@@ -72,7 +72,7 @@
                                     </mona-menu-item>
                                     <mona-menu-item text="Delete"></mona-menu-item>
                                 </mona-menu>
-                                <mona-menu text="View">
+                                <mona-menu text="View" [disabled]="false">
                                     <mona-menu-item text="Zoom In"></mona-menu-item>
                                     <mona-menu-item text="Zoom Out"></mona-menu-item>
                                     <mona-menu-item text="Zoom To"></mona-menu-item>
@@ -80,8 +80,11 @@
                                     <mona-menu-item text="Zoom Extents"></mona-menu-item>
                                     <mona-menu-item text="Zoom Previous"></mona-menu-item>
                                     <mona-menu-item text="Zoom Window"></mona-menu-item>
+                                    <ng-template monaMenuTextTemplate let-text>
+                                        <span style="color: #00a86b; font-weight: bold;">{{text}}</span>
+                                    </ng-template>
                                 </mona-menu>
-                                <mona-menu text="Tools" *ngIf="menuBarMenuVisible">
+                                <mona-menu text="Tools" [disabled]="menuBarMenuVisible" *ngIf="menuBarMenuVisible">
                                     <mona-menu-item text="Options"></mona-menu-item>
                                     <mona-menu-item text="Settings"></mona-menu-item>
                                     <mona-menu-item text="Preferences"></mona-menu-item>
