--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -101,6 +101,29 @@
                                         <span style="font-weight: bold; font-size: 24px;">Test Button Tooltip</span>
                                     </mona-tooltip>
                                 </button>
+
+                                <button monaButton (click)="windowService.openWindow(windowContentTemplate)">Show Window</button>
+                                <ng-template #windowContentTemplate>
+                                    <div style="width: 800px; height: 600px; display: flex; align-items: center; justify-content: center;">
+                                        <mona-combo-box [data]="dropdownListDataItems" textField="text" valueField="value"
+                                            groupField="group" [filterable]="false"
+                                            style="width: 200px; margin-right: 20px;" [disabled]="false"
+                                            [showClearButton]="true" [allowCustomValue]="true"
+                                            [valueNormalizer]="comboBoxValueNormalizer$"
+                                            [value]="dropdownListDataItems[3]" [itemDisabler]="dropdownItemDisabler"
+                                            (valueChange)="onComboBoxValueChange($event)">
+                                            <ng-template monaComboBoxGroupTemplate let-group>
+                                                <span style="color: crimson; font-weight: bold;">{{group}}</span>
+                                            </ng-template>
+                                        </mona-combo-box>
+
+                                        <mona-switch [labelOff]="'12'" labelOn="24" [(ngModel)]="dateFormat24Hours"></mona-switch>
+
+                                        <mona-date-time-picker format="dd/MM/yyyy hh:mm a" style="width: 250px; margin-right: 20px;"
+                                                               [hourFormat]="dateFormat24Hours ? '24' : '12'" [readonly]="false" [value]="dateTimePickerValue"
+                                                               (valueChange)="onDateTimePickerValueChange($event)"></mona-date-time-picker>
+                                    </div>
+                                </ng-template>
                             </div>
 
                             <div>
