--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -93,6 +93,14 @@ input {
     display: none;
 }
 
+.mona-unselectable {
+    &, & * {
+        pointer-events: none !important;
+        cursor: default;
+        user-select: none !important;
+    }
+}
+
 /** Shared Components **/
 .mona-input-selector {
     width: auto;
