--- a/projects/mona-ui/src/lib/window/components/window-content/window-content.component.scss
+++ b/projects/mona-ui/src/lib/window/components/window-content/window-content.component.scss
@@ -1,7 +1,15 @@
+:host {
+    width: 100%;
+    height: 100%;
+}
+
 div.mona-window-content-container {
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 div.mona-window-title-bar {
@@ -35,4 +43,67 @@ div.mona-window-title-bar-actions {
     flex: 1;
     overflow: auto;
     padding: 10px;
+}
+
+
+.mona-window-resizer {
+    position: absolute;
+    display: flex;
+    background-color: transparent;
+    &-north {
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 10px;
+        cursor: ns-resize;
+    }
+    &-south {
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 10px;
+        cursor: ns-resize;
+    }
+    &-east {
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 10px;
+        cursor: ew-resize;
+    }
+    &-west {
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 10px;
+        cursor: ew-resize;
+    }
+    &-northeast {
+        top: 0;
+        right: 0;
+        width: 10px;
+        height: 10px;
+        cursor: nesw-resize;
+    }
+    &-northwest {
+        top: 0;
+        left: 0;
+        width: 10px;
+        height: 10px;
+        cursor: nwse-resize;
+    }
+    &-southeast {
+        bottom: 0;
+        right: 0;
+        width: 10px;
+        height: 10px;
+        cursor: nwse-resize;
+    }
+    &-southwest {
+        bottom: 0;
+        left: 0;
+        width: 10px;
+        height: 10px;
+        cursor: nesw-resize;
+    }
 }
