--- a/projects/mona-ui/src/lib/window/components/window-content/window-content.component.html
+++ b/projects/mona-ui/src/lib/window/components/window-content/window-content.component.html
@@ -1,6 +1,9 @@
 <div class="mona-window-content-container">
     <div class="mona-window-title-bar" monaWindowDragHandler [draggable]="windowData.draggable">
-        <span class="mona-window-title">{{windowData.title ?? 'Default Title'}}</span>
+        <div class="mona-window-title-container">
+            <span class="mona-window-title" *ngIf="!windowData.titleTemplate">{{windowData.title ?? ''}}</span>
+            <ng-container [ngTemplateOutlet]="windowData.titleTemplate" *ngIf="windowData.titleTemplate"></ng-container>
+        </div>
         <div class="mona-window-title-bar-actions">
             <button monaButton class="mona-window-title-bar-action" [flat]="true" (click)="windowData.popupRef.close()">
                 <fa-icon [icon]="closeIcon"></fa-icon>
