--- a/projects/mona-ui/src/lib/window/components/window-content/window-content.component.scss
+++ b/projects/mona-ui/src/lib/window/components/window-content/window-content.component.scss
@@ -21,16 +21,19 @@ div.mona-window-title-bar {
     background-color: var(--mona-background-dark);
 }
 
-span.mona-window-title {
+div.mona-window-title-container {
     flex: 1;
     padding: 0 10px;
-    font-weight: bold;
-    color: var(--mona-text);
     height: 100%;
     display: flex;
     align-items: center;
     cursor: default;
     user-select: none;
+}
+
+span.mona-window-title {
+    font-weight: bold;
+    color: var(--mona-text);
 }
 
 div.mona-window-title-bar-actions {
