--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -365,7 +365,8 @@
 
                                 <mona-switch labelOn="ON" labelOff="OFF" [(ngModel)]="windowVisible"></mona-switch>
 
-                                <mona-window [width]="460" [height]="300" [modal]="false" [draggable]="true" [resizable]="true" [focusedElement]="'#tbx2'" *ngIf="windowVisible">
+                                <mona-window [(width)]="windowWidth" [(height)]="windowHeight" [modal]="false" [draggable]="true"
+                                             [resizable]="true" [focusedElement]="'#tbx2'" *ngIf="windowVisible">
                                     <button monaButton (click)="openWindow(winTemplate);">Inner Window</button>
                                     <input monaTextBox style="width: 150px;" #textBox1/>
                                     <input monaTextBox id="tbx2" style="width: 150px;" #textBox2/>
